fixed border clipping issues

--- a/src/assets/ElementTree.scss
+++ b/src/assets/ElementTree.scss
@@ -10,17 +10,17 @@
     padding-left: 12px;
     position: relative;
 
-
+    z-index: 1;
     &::before {
       content: "";
       display: block;
       position: absolute;
-      left: 10px;
+      left: 11px;
       top: 0;
       height: 100%;
       width: 2px;
       background: lightgray;
-
+      z-index: -1;
     }
   }
   height: 100%;
@@ -57,6 +57,7 @@
       transition: all ease 100ms;
       height: 26px;
       margin: 2px 0;
+
       a {
         display: flex;
         align-items: center;
@@ -82,7 +83,7 @@
 
       &.is-focused{
         background: white;
-        border: 1px solid black;
+        border-color: black;
         //filter: drop-shadow(1px 1px 2px darkgray);
       }
     }
@@ -91,6 +92,7 @@
       display: none;
       ::before{
         content: none;
+
       }
     }
 
